logout and login complete